...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="41dp"
            android:layout_marginBottom="35dp"
            android:text="Done"
            android:textColor="@color/mint"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circularImageView"
            app:layout_constraintTop_toTopOf="parent" />
...
                android:text="Password: "
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType='textPassword'
                android:singleLine="true" />
...
